<resources>
    <string name="app_name">Fun with Flags</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connection_error">Network Error.</string>
    <string name="search_hint">Enter a city</string>
    <string name="welcome">Welcome!</string>
    <string name="capital">Capital</string>
    <string name="name">Name</string>
    <string name="population">Population</string>
    <string name="region">Region</string>
    <string name="currencies">Currencies</string>
    <string name="calling_code">Calling Code</string>
    <string name="countries_heading">Countries of the world</string>
</resources>
